// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionWrapper renders correct answer 1`] = `
.emotion-0 {
  padding: 68px 32px 64px 32px;
  display: grid;
  row-gap: 25px;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-0 {
    row-gap: 10px;
    padding: 65px 25px 25px 25px;
    padding-top: 65px;
  }
}

.emotion-1 {
  color: rgba(47, 82, 123, 1);
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 24px;
    line-height: 34px;
  }
}

.emotion-2 {
  border-radius: 12px;
  border: none;
  background: rgba(96, 191, 136, 1);
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(255, 255, 255, 1);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
  pointer-events: none;
}

.emotion-2>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-2:hover {
  background-color: rgba(96, 191, 136, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-3 {
  margin-right: 45px;
}

.emotion-4 {
  margin-right: auto;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-5 {
  border-radius: 12px;
  border: 2px solid rgba(96, 102, 208, 0.7);
  background: none;
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(96, 102, 208, 0.8);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
  pointer-events: none;
}

.emotion-5>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-5:hover {
  background-color: rgba(249, 168, 38, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 56px;
}

.emotion-15 {
  font-size: 14px;
  margin-left: 5px;
}

.emotion-16 {
  border-radius: 12px;
  font-size: 18px;
  line-height: 27px;
  font-weight: 700;
  border: none;
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  padding: 15px 36px 14px 37px;
  border: none;
  color: rgba(255, 255, 255, 1);
  background: rgba(249, 168, 38, 1);
  box-shadow: 0px 2px 4px rgba(252, 168, 47, 0.4);
}

.emotion-16:hover {
  opacity: 0.7;
}

<div>
  <div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      Bern is the capital of
    </h3>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        A
      </span>
      <span
        class="emotion-4"
      >
        Switzerland
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkIcon
        </title>
        <path
          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="emotion-5"
      type="button"
    >
      <span
        class="emotion-3"
      >
        B
      </span>
      <span
        class="emotion-4"
      >
        Lisbon
      </span>
    </button>
    <button
      class="emotion-5"
      type="button"
    >
      <span
        class="emotion-3"
      >
        C
      </span>
      <span
        class="emotion-4"
      >
        Brasília
      </span>
    </button>
    <button
      class="emotion-5"
      type="button"
    >
      <span
        class="emotion-3"
      >
        D
      </span>
      <span
        class="emotion-4"
      >
        Quito
      </span>
    </button>
    <div
      class="emotion-14"
    >
      <span
        class="emotion-15"
      >
        1
         / 
        10
      </span>
      <button
        class="emotion-16"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders with capitalQuestion 1`] = `
.emotion-0 {
  padding: 68px 32px 64px 32px;
  display: grid;
  row-gap: 25px;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-0 {
    row-gap: 10px;
    padding: 65px 25px 25px 25px;
    padding-top: 65px;
  }
}

.emotion-1 {
  color: rgba(47, 82, 123, 1);
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 24px;
    line-height: 34px;
  }
}

.emotion-2 {
  border-radius: 12px;
  border: 2px solid rgba(96, 102, 208, 0.7);
  background: none;
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(96, 102, 208, 0.8);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
}

.emotion-2>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-2:hover {
  background-color: rgba(249, 168, 38, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-3 {
  margin-right: 45px;
}

.emotion-4 {
  margin-right: auto;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 56px;
}

.emotion-15 {
  font-size: 14px;
  margin-left: 5px;
}

<div>
  <div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      Bern is the capital of
    </h3>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        A
      </span>
      <span
        class="emotion-4"
      >
        Switzerland
      </span>
    </button>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        B
      </span>
      <span
        class="emotion-4"
      >
        Lisbon
      </span>
    </button>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        C
      </span>
      <span
        class="emotion-4"
      >
        Brasília
      </span>
    </button>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        D
      </span>
      <span
        class="emotion-4"
      >
        Quito
      </span>
    </button>
    <div
      class="emotion-14"
    >
      <span
        class="emotion-15"
      >
        1
         / 
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders with flagQuestion 1`] = `
.emotion-0 {
  padding: 68px 32px 64px 32px;
  display: grid;
  row-gap: 25px;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-0 {
    row-gap: 10px;
    padding: 65px 25px 25px 25px;
    padding-top: 20px;
  }
}

.emotion-1 {
  min-height: 56px;
  width: 84px;
  -webkit-filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
  filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
}

@media (max-width: 768px) {
  .emotion-1 {
    padding-top: 20px;
  }
}

.emotion-2 {
  color: rgba(47, 82, 123, 1);
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}

@media (max-width: 768px) {
  .emotion-2 {
    font-size: 24px;
    line-height: 34px;
  }
}

.emotion-3 {
  border-radius: 12px;
  border: 2px solid rgba(96, 102, 208, 0.7);
  background: none;
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(96, 102, 208, 0.8);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
}

.emotion-3>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-3:hover {
  background-color: rgba(249, 168, 38, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-4 {
  margin-right: 45px;
}

.emotion-5 {
  margin-right: auto;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 56px;
}

.emotion-16 {
  font-size: 14px;
  margin-left: 5px;
}

<div>
  <div
    class="emotion-0"
  >
    <img
      alt="flag"
      class="emotion-1"
      src="https://restcountries.eu/data/deu.svg"
    />
    <h3
      class="emotion-2"
    >
      Which country does this flag belong to?
    </h3>
    <button
      class="emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        A
      </span>
      <span
        class="emotion-5"
      >
        Basseterre
      </span>
    </button>
    <button
      class="emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        B
      </span>
      <span
        class="emotion-5"
      >
        Maputo
      </span>
    </button>
    <button
      class="emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        C
      </span>
      <span
        class="emotion-5"
      >
        Germany
      </span>
    </button>
    <button
      class="emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        D
      </span>
      <span
        class="emotion-5"
      >
        Dhaka
      </span>
    </button>
    <div
      class="emotion-15"
    >
      <span
        class="emotion-16"
      >
        1
         / 
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders wrong answer 1`] = `
.emotion-0 {
  padding: 68px 32px 64px 32px;
  display: grid;
  row-gap: 25px;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-0 {
    row-gap: 10px;
    padding: 65px 25px 25px 25px;
    padding-top: 65px;
  }
}

.emotion-1 {
  color: rgba(47, 82, 123, 1);
  font-size: 24px;
  line-height: 36px;
  font-weight: 700;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 24px;
    line-height: 34px;
  }
}

.emotion-2 {
  border-radius: 12px;
  border: none;
  background: rgba(96, 191, 136, 1);
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(255, 255, 255, 1);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
  pointer-events: none;
}

.emotion-2>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-2:hover {
  background-color: rgba(96, 191, 136, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-3 {
  margin-right: 45px;
}

.emotion-4 {
  margin-right: auto;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-5 {
  border-radius: 12px;
  border: none;
  background: rgba(234, 130, 130, 1);
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(255, 255, 255, 1);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
  pointer-events: none;
}

.emotion-5>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-5:hover {
  background-color: rgba(234, 130, 130, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-8 {
  border-radius: 12px;
  border: 2px solid rgba(96, 102, 208, 0.7);
  background: none;
  max-height: 56px;
  width: 100%;
  max-width: 400px;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: rgba(96, 102, 208, 0.8);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 18px 14px 19px;
  pointer-events: none;
}

.emotion-8>span {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
}

.emotion-8:hover {
  background-color: rgba(249, 168, 38, 1);
  color: rgba(255, 255, 255, 1);
  border: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 56px;
}

.emotion-15 {
  font-size: 14px;
  margin-left: 5px;
}

.emotion-16 {
  border-radius: 12px;
  font-size: 18px;
  line-height: 27px;
  font-weight: 700;
  border: none;
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  padding: 15px 36px 14px 37px;
  border: none;
  color: rgba(255, 255, 255, 1);
  background: rgba(249, 168, 38, 1);
  box-shadow: 0px 2px 4px rgba(252, 168, 47, 0.4);
}

.emotion-16:hover {
  opacity: 0.7;
}

<div>
  <div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      Bern is the capital of
    </h3>
    <button
      class="emotion-2"
      type="button"
    >
      <span
        class="emotion-3"
      >
        A
      </span>
      <span
        class="emotion-4"
      >
        Switzerland
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkIcon
        </title>
        <path
          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="emotion-5"
      type="button"
    >
      <span
        class="emotion-3"
      >
        B
      </span>
      <span
        class="emotion-4"
      >
        Lisbon
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          closeIcon
        </title>
        <path
          d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 0 0-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
        />
        <path
          d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="emotion-8"
      type="button"
    >
      <span
        class="emotion-3"
      >
        C
      </span>
      <span
        class="emotion-4"
      >
        Brasília
      </span>
    </button>
    <button
      class="emotion-8"
      type="button"
    >
      <span
        class="emotion-3"
      >
        D
      </span>
      <span
        class="emotion-4"
      >
        Quito
      </span>
    </button>
    <div
      class="emotion-14"
    >
      <span
        class="emotion-15"
      >
        1
         / 
        10
      </span>
      <button
        class="emotion-16"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
